--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+
+
 #headRow{
     box-shadow: 0px 0px 10px #b3acac;
 }
@@ -7,6 +11,7 @@
     margin-left: 10px;
     position: relative;
     top: 3px;
+    font-family: 'Roboto', sans-serif;
 }
 
 small{
