--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-
+.container{
+    max-width: 400px !important;
+}
 
 #headRow{
     box-shadow: 0px 0px 10px #b3acac;
